# guesture-sensor

./: .gitignore  README.md  gesture_logger.py  pyproject.toml
Presentation_controller/: gesture_presenter.html  package-lock.json  package.json  ws_relay.js
config/: mosquitto.conf
dashboard/: gesture_dashboard.html  index.html
data/: X_test.npy  X_train.npy  X_val.npy  gesture_dataset.csv  label_map.json  scaler.pkl  y_test.npy  y_train.npy  y_val.npy
data-collector/: gesture_logger.py
data-collector/data/: gesture_dataset.csv
firmware/: .gitignore  FIX_REPORT_AND_CODEBASE_DOCUMENTATION.md  gesture_collector.ino  platformio.ini
firmware/include/: cmsis_gcc.h
firmware/include/flatbuffers/: base.h
firmware/src/: data_collection.cpp  imu_reader.h  main.cpp  window_buffer.h
models/: best_checkpoint.keras  gesture_model.h  gesture_model.keras  gesture_model_float32.tflite  gesture_model_int8.tflite  quantization_report.txt
scripts/: gesture_logger.py  inference_server.py  main.py  preprocess.py  quantize_export.py  train_model.py
src/hci/: hci_controller.py
src/server/: inference_server.py
src/training/: gesture_logger.py  preprocess.py  quantize_export.py  train_model.py
