[project]
name = "guesture-sensor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "paho-mqtt>=2.1.0",
    "pandas>=3.0.1",
    "pynput>=1.8.1",
    "pyserial>=3.5",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.20.0",
]
